tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__-AAAAAAAAAAAAAAAAAAALSA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 2888,
  "prerequisites": [
    307,
    2595
  ],
  "properties": {
    "auto_claim": false,
    "desc": "If you somehow manage to connect to it, you can get a lot of aspect points, but can't become God. You don't disappear though, so it's probably a decent tradeoff.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "「 」",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    307,
    2595
  ],
  "rewards": [],
  "tasks": []
}
