tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__AQuickerWaytoGet-AAAAAAAAAAAAAAAAAAAHhg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1926,
  "prerequisites": [
    486
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Are you ready for a longer trip? With your new lunch box, saddle, lead and of course a horse, we can start a small journey. Be sure to make paths over water, horses don't like going through deep water. If you get unseated in deep water, you can try getting on repeatedly and moving a small distance each time, this may be faster for small rivers. You can also try jumping over the deep parts if it isn't that big.\n\nIf you are playing single player or a local server, horses make a great way to get around. On non-local servers they can cause problems and desync if you have poor internet, or if the server doesn't have good TPS. Like all the official servers.\n\nYou can tie the lead to your horse and the fence to get it to stick around while you investigate something.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§2§lA Quicker Way to Get Around",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    486
  ],
  "rewards": [],
  "tasks": []
}
