tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__AdvancedNanoChes-AAAAAAAAAAAAAAAAAAACjg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 654,
  "prerequisites": [
    779,
    653
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Combining the advanced electric jetpack and nanosuit yields you the advanced nano chestplate. Now you have the protection of the chestplate combined with the freedom of movement of the jetpack.\n\n[note]Works like the AEJ.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Advanced Nano Chestplate",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    779,
    653
  ],
  "rewards": [],
  "tasks": []
}
