tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__AngelWingsCombin-AAAAAAAAAAAAAAAAAAAFTA==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 1356,
  "prerequisites": [
    3143
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The Angel Wings aren't very protective on their own. Crafting the Infused Quantum Chestplate allows you to combine with the Angel Wings to have a functional and protective combination!\n\n[note]This is still not nearly as good as the other option, the GraviChestPlate.[/note]",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Angel Wings - Combine!",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    3143
  ],
  "rewards": [],
  "tasks": []
}
