tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__MultipleQuestLine__AppropriatePower-AAAAAAAAAAAAAAAAAAAAvg==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 190,
  "prerequisites": [
    176
  ],
  "properties": {
    "auto_claim": false,
    "desc": "Whether you used magic, steam, oil or biogas for power until now, you will run into problems as you advance to higher tiers. So you'll need to upgrade your power grid, at least for your EBF(s). So let's start with something more powerful: A nuclear reactor!\n\nIf you want to know how they work, refer to The Internet or the Reactor Planner at [url]https://github.com/MauveCloud/Ic2ExpReactorPlanner/releases[/url]\n\nNote: The EU multiplier is set to 10x in this pack. That means your nuclear reactor is 10 times more efficient. Make sure to set the planner to GTNH mode under advanced. Also, the base numbers (before 10xing) can be seen on the hover text for all the components.\n\nIf you just want to use them, go to [url]https://wiki.gtnewhorizons.com/wiki/Nuclear_Reactors[/url] for reactor designs. The Thorium 1920 EU one is probably best for now.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "§a§lAppropriate Power",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    176
  ],
  "rewards": [],
  "tasks": []
}
